исправления первая неделя

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                             с собой.
                         </div>
                     </div>
-                    <ul class="advantages__list advantages">
+                    <ul class="advantages">
                         <li class="advantages__item advantage">
                             <div class="advantage__img-wrapper">
                                 <img src="./img/icons/Vector.svg" alt="man" class="advantage__img">
@@ -175,7 +175,7 @@
                             </div>
                         </div>
                         <ul class="reviews__switcher">
-                            <li class="reviews__switcher-item interactive-avatar interactive-avatar__active">
+                            <li class="reviews__switcher-item interactive-avatar interactive-avatar_active">
                                 <a href="" class="interactive-avatar__link">
                                     <img src="./img/content/content__reciews/alena_hmelnickay.jpg" alt="alena hmelnicky" class="interactive-avatar__img">
                                 </a>
@@ -281,9 +281,9 @@
             </section>
         </div>
         
-        <nuv class="fixed-menu">
+        <nav class="fixed-menu">
             <ul class="fixed-menu__list">
-                <li class="fixed-menu__item fixed-menu__item__active">
+                <li class="fixed-menu__item fixed-menu__item_active">
                     <a href="" class="fixed-menu__link"></a>
                 </li>
                 <li class="fixed-menu__item">
@@ -311,7 +311,7 @@
                     <a href="" class="fixed-menu__link"></a>
                 </li>
             </ul>
-        </nuv>
+        </nav>
     </div>
 </body>
 
