--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             </ul>
                         </nav>
                         <div class="phone">
-                            <a href="tel:+78009039090" class="phone__link">
+                            <a href="tel:+78009039090" class="phone__link phone__link_header">
                                 <span class="phone__icon-wrapper">
                                     <img src="./img/icons/phone.svg" alt="phone" class="phone__icon">
                                 </span>
@@ -52,6 +52,9 @@
                             </a>
                         </div>
 
+                        <a href="#" class="hamburger">
+                            <span class='hamburger__plank'></span>
+                        </a>
                     </header>
 
 
@@ -268,13 +271,14 @@
                             </div>
                         </div>
                         <div class="forms__row">
-                            <div class="forms__btn">
+                            <div class="form__btns">
+                                <div class="forms__btn">
                                 <button type="submit" class="btn btn_theme_green">Заказать</button>
-                            </div>
-                            <div class="forms__btn">    
+                                </div>
+                                <div class="forms__btn">    
                                 <button type="reset" class="btn  btn_theme_noBg">Очистить</button>
-                            </div>
-                                
+                                </div>
+                            </div>    
                         </div>
                     </div>
                 </form>
