--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                     </svg>
                                 </div>
                                 <div class="feature__desc">
-                                    Не портит фигуру
+                                    Не портит фигуру git
                                 </div>
                             </li>
                         </ul>
