--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
                         </ul>
                     </div>
                 </div>
-                <div class="decor_berries"></div>
+               
             </section>
-            <section class="sections section-why">
-                <div class="container">
+            <section class="sections section-why ">
+                <div class="container hero__container">
                     <div class="top-line">
                         <h2 class="top-line__title title title_size_xl">почему chocco?</h2>
                         <div class="top-line__subtitle">
@@ -179,7 +179,7 @@
 
             </section>
             <section class="sections section-reviews">
-                <div class="container">
+                <div class="container hero__container">
                     <h2 class="top-line__title title title_size_xl">отзывы</h2>
                     <div class="reviews">
                         <div class="reviews__display">
@@ -221,7 +221,7 @@
                 </div>
             </section>
             <section class="sections sections-forms">
-                <div class="container">
+                <div class="container hero__container">
                 <h2 class="sections-forms__title title title_size_xl">закажите доставку</h2>
                 <form class="forms">
                     <div class="forms__col">
@@ -305,6 +305,7 @@
                         </div>
                     </div>
                 </form>
+                </div>
             </section>
         </div>
         
