исправления 2 неделя, высота без vh

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                
             </section>
             <section class="sections section-why ">
-                <div class="container hero__container">
+                <div class="container sections__container">
                     <div class="top-line">
                         <h2 class="top-line__title title title_size_xl">почему chocco?</h2>
                         <div class="top-line__subtitle">
@@ -179,7 +179,7 @@
 
             </section>
             <section class="sections section-reviews">
-                <div class="container hero__container">
+                <div class="container sections__container">
                     <h2 class="top-line__title title title_size_xl">отзывы</h2>
                     <div class="reviews">
                         <div class="reviews__display">
@@ -221,7 +221,7 @@
                 </div>
             </section>
             <section class="sections sections-forms">
-                <div class="container hero__container">
+                <div class="container sections__container">
                 <h2 class="sections-forms__title title title_size_xl">закажите доставку</h2>
                 <form class="forms">
                     <div class="forms__col">
